# TodaysMenuAPI

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  env.json  index.js  package-lock.json  package.json  rollup.config.js  samconfig.toml  template.yaml
docker/: Dockerfile  docker-compose.yml
src/: authorizer.js  data_sources.rs  graphql.rs  main.rs  resolvers.js  schema.graphql
src/data-sources/: Dishes.js  Ingredients.js  Photos.js  Shares.js  authenticator.js  dishes.js  ingredients.js  photos.js  shares.js
src/data_sources/: auth.rs  dishes.rs  ingredients.rs  shares.rs
