[package]
name = "todays-menu-api"
version = "1.0.0"
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "3.0.31", features = ["dataloader"] }
async-graphql-poem = "3.0.31"
poem = "1.3.5"
poem-lambda = "1.3.5"
aws-config = "0.8.0"
aws-sdk-dynamodb = "0.8.0"
aws-sdk-s3 = "0.8.0"
tokio = { version = "1.17.0", features = ["macros", "rt"] }
anyhow = "1.0.55"
serde = "1.0.136"
serde_with = "1.12.0"
serde_dynamo = { version = "3.0.0", features = ["aws-sdk-dynamodb+0_8"] }
async-trait = "0.1.52"
http = "0.2.6"
biscuit-auth = "2.0.1"
hex = "0.4.3"
argon2 = "0.3"
nanoid = "0.4.0"

[profile.release]
strip = true
